After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 762069 - the calendar color does not update in the calendar pop-over
the calendar color does not update in the calendar pop-over
Status: RESOLVED FIXED
Product: gnome-calendar
Classification: Applications
Component: User Interface
3.19.x
Other Linux
: Normal normal
: 3.26
Assigned To: GNOME Calendar maintainers
GNOME Calendar maintainers
Depends on:
Blocks:
 
 
Reported: 2016-02-15 11:09 UTC by Marinus Schraal
Modified: 2017-04-17 18:20 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
window: update calendar colors from popover (3.43 KB, patch)
2016-02-16 17:10 UTC, Georges Basile Stavracas Neto
committed Details | Review

Description Marinus Schraal 2016-02-15 11:09:46 UTC
Changing the calendar color displayed in the year/month view works fine, but the calendar color in the menu pop-over stays the same old color until restart.
Comment 1 Georges Basile Stavracas Neto 2016-02-16 17:10:14 UTC
Created attachment 321425 [details] [review]
window: update calendar colors from popover

Another easy fix after this major rework.
Comment 2 Georges Basile Stavracas Neto 2016-02-16 17:10:59 UTC
Attachment 321425 [details] pushed as 9ba89e1 - window: update calendar colors from popover